--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "test",
+  "name": "bruland.no",
+  "homepage": "https://alexbrul.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@emailjs/browser": "^3.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "framer-motion": "^6.2.3",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.2",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
